k8s/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: staging-workload-frontend-ingress
 namespace: staging-workload
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - staging-workloadsbackend.openebs.ci
   secretName: staging-workload-ingress
 rules:
 - host: staging-workloadsbackend.openebs.ci
   http:
     paths:
     - path: /api/
       backend:
         serviceName: staging-workload-backend-service
         servicePort: 3000
